[package]
name = "rusty_pcap"
version = "0.1.0"
authors = ["joe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.0"
etherparse = "0.9.0"
pcap-file = "1.1.1"
pnet = "0.28.0"
chrono = "0.4.19"
structopt = "0.3.25"
config-file = "0.2.3"
serde = { version = "1.0.137", features = ["derive"] }
syn = "1.0.92"
serde_json = "1.0.80"