[package]
name = "rusty_pcap"
version = "0.1.0"
authors = ["joe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.2.0"
etherparse = "0.14.2"
pcap-file = "2.0.0"
pnet = "0.34.0"
chrono = "0.4.19"
structopt = "0.3.25"
config-file = "0.2.3"
serde = { version = "1.0.137", features = ["derive"] }
syn = "2.0.49"
serde_json = "1.0.80"
log = "0.4"
env_logger = "0.11.2"
toml = "0.8"
regex = "1"
rocket = { version="0.5.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
