[package]
name = "rusty-pcap-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.2.0"
etherparse = "0.14.2"
pcap-file = "2.0.0"
pnet = "0.34.0"
chrono = "0.4.19"
structopt = "0.3.25"
config-file = "0.2.3"
serde = { version = "1.0.137", features = ["derive"] }
syn = "2.0.49"
serde_json = "1.0.80"
log = "0.4"
env_logger = "0.11.2"
toml = "0.8"
regex = "1"
rocket = { version="0.5.0", features = ["json", "tls"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
tempfile = "3.10"
rocket_cors = "0.6.0"
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.10", features = ["full"] }
native-tls = "0.2.11"
hostname = "0.4.0"
sysinfo = "0.30.11"
