[package]
name = "rusty-pcap-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap-file = "2.0.0"
pnet = "0.35.0"
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive"] }
config-file = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.9"
toml = "0.8"
regex = "1.12"
rocket = { version = "0.5.1", features = ["json", "tls", "mtls"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
time = "0.3"
tokio = { version = "1.49", features = ["full"] }
tempfile = "3.25"
rocket_cors = "0.6.0"
tokio-native-tls = "0.3.1"
tokio-util = { version = "0.7.18", features = ["full"] }
native-tls = "0.2.16"
hostname = "0.4.2"
sysinfo = "0.33"

[dependencies.openssl-sys]
version = "0.9.111"
features = ["vendored"]

