[package]
name = "rusty-pcap"
version = "0.1.0"
authors = ["exile1340"]
edition = "2021"


[dependencies]
pcap-file = "2.0.0"
pnet = "0.35.0"
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive"] }
config-file = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.9"
toml = "0.8"
regex = "1.12"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }
tempfile = "3.25"
rusty-pcap-lib = { path = "../rusty-pcap-lib" }